Added spring boot dependencies